# vegastrike-market

./: AUTHORS  CMakeLists.txt  Consumer.cpp  Consumer.hpp  Doxyfile  Doxyfile.in  DoxygenLayout.xml  Economy.cpp  Economy.hpp  Factory.cpp  Factory.hpp  Makefile  Market.cpp  Market.hpp  ProductionOption.cpp  ProductionOption.hpp  README.md  Reserve.cpp  Reserve.hpp  btree_free_as_in_beer.cpp  btree_iterator.cpp  btree_iterator.hpp  clean-build.sh  coverage.sh  coverage.sh.in  element.hpp  factory.cpp  factory.hpp  factory_main.cpp  images.h  market.cpp  market.hpp  market_main.cpp  mkunittestfiles.sh  node.cpp  node.hpp  roottracker.hpp  testFactory.cpp  testProductionOption.cpp  valgrind.sh  (+3 more)
cmake/: FindCppUnit.cmake
data/: CargoType.xml  Economy.xml  ProductionOption.xml  cargotype.xml  economy.dtd  examples.xml  vector_cargo.dtd  vslogo.xcf
doc/: doxygen_stl.cpp  factory_masterplan.txt  market_documentation.txt  plan2.md  plan2.txt  reqeng.md  scatchpad.txt  unittest.template.cpp  unittest.template.hpp  unittest.template.main.cpp
market/src/: ProductionOption.cpp
src/: Base.cpp  Base.hpp  Cargo.cpp  Cargo.hpp  CargoHold.cpp  CargoHold.hpp  CargoType.cpp  CargoType.hpp  Consumer.cpp  Economy.cpp  Economy.hpp  Factory.cpp  Factory.hpp  Governor.cpp  Governor.hpp  MPLParse.cpp  MPLParse.hpp  Market.hpp  ProductionOption.cpp  ProductionOption.hpp  Reserve.cpp  Reserve.hpp  Trader.hpp  VSmarket.cpp  XMLNode.cpp  XMLNode.hpp  XMLParse.cpp  XMLParse.hpp  btree_iterator.hpp  xmleconomy.cpp
src/common/: common.cpp  common.h
test/: BaseTest.cpp  BaseTest.hpp  CargoHoldTest.cpp  CargoHoldTest.hpp  CargoTest.cpp  CargoTest.hpp  CargoTypeTest.cpp  CargoTypeTest.hpp  EconomyTest.cpp  EconomyTest.hpp  FactoryTest.cpp  FactoryTest.hpp  MPLParseTest.cpp  MPLParseTest.hpp  MakeStupidProductionOptions.cpp  PonySwagTest.cpp  PonySwagTest.hpp  ProductionOptionTest.cpp  ProductionOptionTest.hpp  XMLNodeTest.cpp  XMLNodeTest.hpp  XMLParseTest.cpp  XMLParseTest.hpp  bigtest.cpp  cppunittest.cpp  main.cpp  testCargoHold.cpp  testCargoHold.hpp  testFactory.cpp  testProductionOption.cpp  testProductionOption.hpp  xmlTest.cpp  xmlTest.hpp
tools/: beautify.sh  clanganalyze.sh  gencoverage.sh  gprofgraph.sh  master-part-list-unparser.sh  mkunittestfiles.sh  performance.sh  reqdocchk.sh  simple_hpp_check.sh  valgrindgraph.sh
